Order form's jump bug fixed

--- a/src/app/view/modal/modal.component.scss
+++ b/src/app/view/modal/modal.component.scss
@@ -29,6 +29,7 @@
       position: relative;
       width: auto;
       height: auto;
+      height: 728px;
       min-width: 350px;
     }
   }
